fix: people putting way too long descriptions lol

--- a/src/app/_components/TeamMember/index.module.scss
+++ b/src/app/_components/TeamMember/index.module.scss
@@ -1,11 +1,11 @@
 .teamMemberImage {
   position: relative;
-  width: 250px;
+  width: 300px;
   height: 200px;
   border-radius: 25px;
 
   img {
-    border-radius: 22px 22px 0px 0px ;
+    border-radius: 22px 22px 0px 0px;
   }
 }
 
@@ -16,10 +16,10 @@
   box-sizing: content-box;
   border: solid #f3f3f3;
   border-radius: 25px;
-  width: 250px;
+  width: 300px;
   background-color: #f3f3f3;
   color: black;
-  height: 350px;
+  height: 360px;
 }
 
 .name {
@@ -35,4 +35,13 @@
 
 .fieldOfStudy {
   font-style: italic;
+}
+
+.description {
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
